@@ -1,3 +1,8 @@
+2002-03-14  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* elfxx-target.h (TARGET_BIG_SYM): Set ar_max_namelen to 15.
+	(TARGET_LITTLE_SYM): Set ar_max_namelen to 15.
+
 2002-03-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* cpu-mips.c (mips_compatible): New.  Don't check bits_per_word.
